# hmatrix-csv

./: .travis.yml  LICENSE  README.md  hmatrix-csv.cabal
Data/Csv/: .HMatrix.hs.swp  HMatrix.hs
