name:                hmatrix-csv
version:             0.1.0.0
synopsis:            CSV encoding and decoding for hmatrix.
description:
    Aims to provide easy CSV encoding and decoding of matrices.
    Right now only matrices of type 'Double' are supported.
Homepage:            https://github.com/grtlr/hmatrix-csv
license:             BSD3
license-file:        LICENSE
bug-reports:         https://github.com/grtlr/hmatrix-csv/issues
author:              Jochen Görtler
maintainer:          lyzrd17@gmail.com
copyright:           (c) 2014 Jochen Görtler
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.Csv.HMatrix
  build-depends:
    base >=4.7 && <4.8,
    cassava >=0.4 && <0.5,
    hmatrix >=0.16 && <0.17,
    vector >=0.10 && <0.11,
    bytestring >=0.10 && <0.11
  -- hs-source-dirs:      
  default-language:    Haskell2010

source-repository head
    type: git
    location: https://github.com/grtlr/hmatrix-csv.git
